--- a/p0.html
+++ b/p0.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Abdulrauf's test page</title>
+    <title>Naseem's test page</title>
   </head>
   <body>
-    <img src="images/chrome.svg" alt="Abdulrauf's test image" />
+    <img src="images/chrome.svg" alt="Naseem's test image" />
   </body>
 </html>
 
